2007-01-18  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseHandler.unregisterCommand):  Add a
	method to remove support for a command from a Handler instance.

	* pykickstart/version.py:  Add support for the F7 version.
	* pykickstart/commands/f7.py:  Add a devel version that removes the
	deprecated langsupport and mouse commands.

2007-01-17  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.readKickstartFromString):
	Add a method to read a kickstart file from a string, in addition to
	the one that's already there for reading from a file.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version, finally.

2007-01-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Script.__str__):  Write out --interpreter
	since that's what the parser expects (#222877).

	* pykickstart/commands/fc4.py:  Fix exception error messages.

2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseHandler.empty):  Add a method to
	empty out the contents of the commands dict.

	* pykickstart/commands/fc4.py (BaseHandler.Upgrade):  Only set upgrade
	if that's what the current command is.
	(BaseHandler.RootPw):  rootpw -> password

2007-01-15  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (returnClassForVersion):  Take a default
	version argument.
	(returnClassForVersion):  Rename Version to Handler.

	* pykickstart/parser.py:  Rename kshandlers to handler.

	* pykickstart/commands/base.py:  Rename BaseVersion to BaseHandler,
	registerHandler to registerCommand, and self.dispatcher to
	self.handler.
	* pykickstart/commands/fc4.py:  Likewise.
	* pykickstart/commands/fc5.py:  Likewise.
	* pykickstart/commands/fc6.py:  Likewise.

2007-01-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (BaseVersion.overrideHandler):  Provide